@@ -39,14 +39,7 @@
     <Compile Include="Cube.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Cube.Designer.cs">
-      <DependentUpon>Cube.cs</DependentUpon>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Cube.resx">
-      <SubType>Designer</SubType>
-      <DependentUpon>Cube.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
