@@ -1,9 +1,11 @@
 Todo:
-+ Find out why many examples crash when compiled in release mode, but only when run outside the editor.
-+ Add more examples (e.g. the GLSL example I wrote, some of kanato's examples etc).
++ + + Find out why many examples crash when compiled in release mode, but only when run outside the editor.
++ + Add cross-platform way for overriding the Application.Idle handler.
++ Add more examples.
 + + Change the hierarchy of the WindowsContext and WindowsVistaContext classes. The should have a common ancestor who manages the windows creation (it should be the same for both).
 + + Add more constructors to the WindowsContext classes. This probably needs updating of the WinAPI assembly.
 + + Add X11Context constructors.
++ + Add more GLForm constructors.
 + Find out what is needed for the MacOS platform (how to do function loading and window management without X11).
 + Add full bindings to Glu, Wgl, Glx and Agl.
 + Add the Math module.
@@ -14,6 +16,5 @@ Todo:
 + See if using Nant for building is a good idea.
 + + Clean up the code.
 + + Add comments and documentation (faqs, pitfalls, best practices).
-+ + + Add the CLS compliant attribute to the Gl class.
++ + + Add the CLS compliant attribute to the GL class.
 + Add more platform bindings.
-+ Add cross-platform way of overriding the Application.Idle handler.
